--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
     background-color: brown;
     height: 100px;
     border: rgb(13, 219, 48) dotted 2px;
-    width: 100px;
+    width: 100%;
 
 }
 
@@ -58,6 +58,15 @@ a {
 
 .flex{
     display: flex;
+}
+
+.just-sb{
+    justify-content: space-between;
+}   
+
+.flex-wrap{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .col30{
@@ -72,6 +81,9 @@ a {
     width: 70%;
 }
 
+/* .btn{
+    padding: 10px 30px;
+} */
 
 
 /* header */
@@ -86,3 +98,13 @@ a {
 .card-plane{
     justify-content: space-between;
 }
+
+
+/* operation.cart */
+
+.cart{
+    background-color: brown;
+    border: rgb(13, 219, 48) dotted 2px;
+    margin-bottom: 10px;
+}
+
