--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    min-width: 800px;
+}
 
 img {
     max-width: 100%
@@ -16,21 +20,32 @@ ul {
 }
 
 
-/* container */
+/* utilityes */
 
 .s-container {
     width: 80%;
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 1500px;
+    min-width: 1000px;
 }
 
 .bg-container{
     width: 90%;
     margin: 0 auto;
     max-width: 1200px;
+    min-width: 800px;
 }
 
+.pt30{
+    padding-top: 30px;
+}
 
+.btn{
+    background-color: #0061FE;
+    color: white;
+    padding: 5px 10px;
+    border: 1px white solid;
+}
 /* debug */
 
 
@@ -64,6 +79,10 @@ ul {
 .flex-wrap{
     display: flex;
     flex-wrap: wrap;
+}
+
+.col15{
+    width: 15%;
 }
 
 .col30{
@@ -117,5 +136,58 @@ hr{
     color: rgb(0, 0, 0);
     height: 1px;
     width: 30%;
-    noshade
 }
+
+
+/* root */
+
+:root{
+    
+}
+
+
+/* header */
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(247, 245, 242);
+    height: 60px;
+
+        a{
+           text-decoration: inherit;
+        }
+
+}
+
+.header-itm{
+    width: 50%;
+    display: flex;
+    justify-content: ;
+}
+
+.header-list{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 11px;
+}
+
+.dx{
+    justify-content: flex-end;
+}
+
+.header-list img{
+    width: 80%;
+    padding-left: 30px;
+}
+
+.header-list li{
+    padding-right: 15px;
+}
+
+/* fine header */
+
+/* main */
+
