--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,9 @@ hr {
 /* hero */
 .hero {
     padding-top: 60px;
-    background-color: #B4D0E6;
+    /* background: linear-gradient(to bottom, lightblue 70%, white 50%); */
+    background: linear-gradient(to bottom, lightblue 70%, rgb(255, 255, 255) 50%);
+    
 
 
     h1 {
@@ -209,12 +211,21 @@ hr {
     display: flex;
     align-items: flex-start;
 
+
     .col30 {
         padding: 20px;
         padding-top: 105px;
 
         .btn {
-            margin-top: 20px;
+            margin-top: 30px;
+        }
+
+        p{
+            margin-top: 30px;
+        }
+
+        .arrow{
+            font-size: 100px;
         }
 
     }
@@ -225,3 +236,14 @@ hr {
 
 
 /* fine-hero */
+
+/* plans */
+
+
+
+/* fine plans */
+
+.plan{
+
+}
+
