--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,6 @@ hr {
 
 
 -----------------------------------------------------------------------------
-
-
 /* root */
 
 :root {}
@@ -102,7 +100,7 @@ hr {
     flex-wrap: wrap;
 }
 
-.col10{
+.col10 {
     width: 10%;
 }
 
@@ -118,11 +116,15 @@ hr {
     width: 50%;
 }
 
+.col60 {
+    width: 60%;
+}
+
 .col70 {
     width: 70%;
 }
 
-.py-30{
+.py-30 {
     padding: 30px 0;
 }
 
@@ -144,7 +146,7 @@ hr {
 .btn {
     background-color: #0061FE;
     color: white;
-    padding: 5px 10px;
+    padding: 10px 20px;
     border-color: #0061FE;
     font-size: 0.8rem;
 }
@@ -154,11 +156,11 @@ hr {
 
 /* main */
 
-section{
+section {
     padding: 50px 0px;
 }
 
-*{
+* {
     font-family: 'Cascadia Code', sans-serif;
 }
 
@@ -218,7 +220,7 @@ section{
 /* hero */
 .hero {
     background: linear-gradient(to bottom, lightblue 70%, rgb(255, 255, 255) 50%);
-    
+
 
 
     h1 {
@@ -241,11 +243,11 @@ section{
             margin-top: 30px;
         }
 
-        p{
+        p {
             margin-top: 30px;
         }
 
-        .arrow{
+        .arrow {
             font-size: 100px;
         }
 
@@ -260,59 +262,61 @@ section{
 
 /* plans */
 
-.plan{
-    .card{
-        border: #c0c0c0 solid 1px;
-        
-        *{
+.plan {
+
+    .card {
+        border:#c0c0c0 solid 1px;
+
+        * {
             padding: 5px 5px;
         }
 
-        >*{
+        >* {
             margin: 10px 20px;
         }
 
-        h4{
+        h4 {
             text-align: center;
             border-bottom: 1px #c0c0c0 solid;
         }
 
-        .btn{
+        .btn {
             text-decoration: inherit;
         }
 
-        .btn{
+        .btn {
             display: block;
             width: 70%;
             text-align: center;
             margin: 0 auto;
+            padding: 10px 20px;
         }
 
-        i{
+        i {
             display: inline-block;
             vertical-align: top;
             /* padding: 0px; */
         }
 
-        p{
+        p {
             display: inline-block;
             vertical-align: top;
         }
 
-        hr{
+        hr {
             padding: 0px;
             border: none;
             background-color: #c0c0c0;
             height: 1px;
         }
 
-        li{
+        li {
             list-style: none;
             /* padding: 0px; */
             margin-top: 0.1px;
         }
 
-        .fa-check{
+        .fa-check {
             color: #0061FE;
         }
 
@@ -323,10 +327,80 @@ section{
 
 /* enterprise */
 
+.enterprise {
 
-/* fine enterprise */
+    .border{
+        border: #c0c0c0 solid 1px;
+        padding: 10px 0px;
+    }
 
-.plan{
+    h2 {
+        text-align: center;
+        border-bottom: solid 1px #c0c0c0;
+        padding-bottom: 10px;
+        
+    }
+
+    h3{
+        font-size: 2rem;
+    }
+
+    .flex{
+        padding: 10px 30px;
+    }
+
+    .subtitle{
+        margin-top: 20px;
+        font-weight: bold;
+    }
+
+    .paragraph{
+        margin-top: 50px;
+        font-size: 0.8rem;
+    }
+
+    .btn{
+        display: block;
+        width: 70%;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .col70{
+        padding-right: 50px;
+        padding-left: 30px;
+    }
+
 
 }
 
+/* fine enterprise */
+
+
+/* partner */
+
+.partner{
+    padding: 50px 0px;
+    .flex{
+        align-items: center;
+    }
+
+    .col30{
+        h3{
+            margin-bottom: 20px;
+            font-size: 1.5rem;
+        }
+        
+    }
+
+    .btn{
+        display: inline-block;
+        margin-top: 50px;
+        background-color: aliceblue;
+        color: #525252;
+        text-decoration: inherit;
+        border: solid 1px gray;
+    }
+}
+
+/* foine partner */
