--- a/css/style.css
+++ b/css/style.css
@@ -41,23 +41,6 @@ ul {
 
 
 
-/* plane */
-
-.card-plane {
-    justify-content: space-between;
-}
-
-
-/* operation.cart */
-
-.cart {
-    background-color: brown;
-    border: rgb(13, 219, 48) dotted 2px;
-    margin-bottom: 10px;
-}
-
-
-
 /* footer */
 
 .footer {
@@ -73,11 +56,9 @@ hr {
 
 
 
-
-
-
-
 -----------------------------------------------------------------------------
+
+
 /* root */
 
 :root {}
@@ -157,7 +138,7 @@ hr {
 /* main */
 
 section {
-    padding: 50px 0px;
+    padding: 80px 0px;
 }
 
 * {
@@ -404,3 +385,19 @@ section {
 }
 
 /* foine partner */
+
+/* operations */
+
+.operation{
+    h3{
+        font-size: 2.5rem;
+        margin-bottom: 65px;
+    }
+    .card{
+        p{
+            margin-top: 20px;
+        }
+    }
+}
+
+/* fine opration */
