--- a/css/style.css
+++ b/css/style.css
@@ -20,51 +20,6 @@ ul {
 }
 
 
-/* debug */
-
-
-.bkg {
-    background-color: cadetblue;
-    width: 100%;
-    padding: 20px 0px;
-    border-top: solid 2px blue;
-    border-bottom: solid 2px chocolate;
-}
-
-.def {
-    background-color: brown;
-    height: 100px;
-    border: rgb(13, 219, 48) dotted 2px;
-    width: 100%;
-
-}
-
-
-
-/* footer */
-
-.footer {
-    background-color: rgb(207, 185, 185);
-}
-
-hr {
-    color: rgb(0, 0, 0);
-    height: 1px;
-    width: 30%;
-}
-
-
-
-
------------------------------------------------------------------------------
-
-
-/* root */
-
-:root {}
-
-
-
 /* utilities */
 
 
@@ -112,8 +67,8 @@ hr {
 .s-container {
     width: 70%;
     margin: 0 auto;
-    max-width: 1500px;
-    min-width: 1000px;
+    max-width: 1150px;
+    min-width: 800px;
 }
 
 .bg-container {
@@ -200,7 +155,7 @@ section {
 
 /* hero */
 .hero {
-    background: linear-gradient(to bottom, lightblue 70%, rgb(255, 255, 255) 50%);
+    background: linear-gradient(to bottom, lightblue 73%, rgb(255, 255, 255) 30%);
 
 
 
@@ -394,10 +349,66 @@ section {
         margin-bottom: 65px;
     }
     .card{
+        margin-top: 50px;
         p{
-            margin-top: 20px;
+            margin-top: 30px;
         }
+    h4{
+        margin-top: 15px;
+    }
     }
 }
 
 /* fine opration */
+
+/* final title */
+
+.final-title{
+    h3{
+        font-size: 1.5rem;
+        margin-bottom: 40px;
+    }
+    
+    a{
+        font-size: 0.8rem;
+    }
+}
+
+
+/* footer */
+
+.footer{
+    background-color: black;
+    color:aliceblue;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+    .flex{
+        justify-content: space-between;
+        margin-bottom: 30px;
+    }
+
+    h2{
+        margin-bottom: 20px;
+        font-size: 1.5rem;
+    }
+
+    ul{
+        display: flex;
+        flex-direction: column;
+    }
+
+    li{
+        margin-bottom: 5px;
+        font-weight: 100;
+
+    }
+
+    .nation{
+        margin-top: 50px;
+    }
+
+
+}
+
+/* fine footer */
