--- a/css/style.css
+++ b/css/style.css
@@ -155,43 +155,44 @@ section {
 
 /* hero */
 .hero {
-    background: linear-gradient(to bottom, lightblue 73%, rgb(255, 255, 255) 30%);
+    background-color: #a8c0e7;
+    padding: 0px;
 
-
+    .bg-container{
+        position:relative;
+        top:100px;
+    }
 
     h1 {
         font-size: 3rem;
         margin-bottom: -50px;
     }
 
-}
+    .hero-flex {
+        display: flex;
+        align-items: flex-start;
 
-.hero-flex {
-    display: flex;
-    align-items: flex-start;
+        .col30 {
+            padding: 20px;
+            padding-top: 105px;
 
+            .btn {
+                margin-top: 30px;
+            }
 
-    .col30 {
-        padding: 20px;
-        padding-top: 105px;
+            p {
+                margin-top: 30px;
+            }
 
-        .btn {
-            margin-top: 30px;
+            .arrow {
+                font-size: 100px;
+            }
         }
-
-        p {
-            margin-top: 30px;
-        }
-
-        .arrow {
-            font-size: 100px;
-        }
-
     }
-
-
-
 }
+
+
+
 
 
 /* fine-hero */
@@ -199,9 +200,10 @@ section {
 /* plans */
 
 .plan {
+    padding: 120px;
 
     .card {
-        border:#c0c0c0 solid 1px;
+        border: #c0c0c0 solid 1px;
 
         * {
             padding: 5px 5px;
@@ -265,7 +267,7 @@ section {
 
 .enterprise {
 
-    .border{
+    .border {
         border: #c0c0c0 solid 1px;
         padding: 10px 0px;
     }
@@ -274,35 +276,35 @@ section {
         text-align: center;
         border-bottom: solid 1px #c0c0c0;
         padding-bottom: 10px;
-        
+
     }
 
-    h3{
+    h3 {
         font-size: 2rem;
     }
 
-    .flex{
+    .flex {
         padding: 10px 30px;
     }
 
-    .subtitle{
+    .subtitle {
         margin-top: 20px;
         font-weight: bold;
     }
 
-    .paragraph{
+    .paragraph {
         margin-top: 50px;
         font-size: 0.8rem;
     }
 
-    .btn{
+    .btn {
         display: block;
         width: 70%;
         text-align: center;
         margin: 0 auto;
     }
 
-    .col70{
+    .col70 {
         padding-right: 50px;
         padding-left: 30px;
     }
@@ -315,21 +317,22 @@ section {
 
 /* partner */
 
-.partner{
+.partner {
     padding: 50px 0px;
-    .flex{
+
+    .flex {
         align-items: center;
     }
 
-    .col30{
-        h3{
+    .col30 {
+        h3 {
             margin-bottom: 20px;
             font-size: 1.5rem;
         }
-        
+
     }
 
-    .btn{
+    .btn {
         display: inline-block;
         margin-top: 50px;
         background-color: aliceblue;
@@ -343,19 +346,22 @@ section {
 
 /* operations */
 
-.operation{
-    h3{
+.operation {
+    h3 {
         font-size: 2.5rem;
         margin-bottom: 65px;
     }
-    .card{
+
+    .card {
         margin-top: 50px;
-        p{
+
+        p {
             margin-top: 30px;
         }
-    h4{
-        margin-top: 15px;
-    }
+
+        h4 {
+            margin-top: 15px;
+        }
     }
 }
 
@@ -363,13 +369,13 @@ section {
 
 /* final title */
 
-.final-title{
-    h3{
+.final-title {
+    h3 {
         font-size: 1.5rem;
         margin-bottom: 40px;
     }
-    
-    a{
+
+    a {
         font-size: 0.8rem;
     }
 }
@@ -377,34 +383,34 @@ section {
 
 /* footer */
 
-.footer{
+.footer {
     background-color: black;
-    color:aliceblue;
+    color: aliceblue;
     padding-top: 50px;
     padding-bottom: 50px;
-    
-    .flex{
+
+    .flex {
         justify-content: space-between;
         margin-bottom: 30px;
     }
 
-    h2{
+    h2 {
         margin-bottom: 20px;
         font-size: 1.5rem;
     }
 
-    ul{
+    ul {
         display: flex;
         flex-direction: column;
     }
 
-    li{
+    li {
         margin-bottom: 5px;
         font-weight: 100;
 
     }
 
-    .nation{
+    .nation {
         margin-top: 50px;
     }
 
