--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ section {
     justify-content: space-around;
     align-items: center;
     background-color: rgb(247, 245, 242);
-    height: 60px;
+    /* height: 60px; */
 
     a {
         text-decoration: inherit;
@@ -129,7 +129,7 @@ section {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        font-size: 11px;
+        font-size: 15px;
     }
 
     .dx {
@@ -142,12 +142,22 @@ section {
     }
 
     .header-list li {
-        padding-right: 15px;
+        padding: 20px;
+        border-bottom: solid 3px rgb(247, 245, 242);
     }
 
     .text-right {
         text-align: right;
     }
+
+    li:hover {
+        border-bottom: solid black 3px;
+    }
+
+
+    /* hover */
+
+    
 }
 
 /* fine header */
